--- a/main.css
+++ b/main.css
@@ -149,6 +149,7 @@ a {
 .ModeToggle a {
     position: relative;
     text-align: center;
+    padding-top: 10px;
 }
 
 .menu li {
@@ -278,7 +279,7 @@ a {
 .modal {
   display: none; /* Hidden by default */
   position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
+  z-index: 3; /* Sit on top */
   padding-top: 100px; /* Location of the box */
   left: 0;
   top: 0;
