--- a/hamburger.css
+++ b/hamburger.css
@@ -1,5 +1,6 @@
-/* header */
-  
+/*Hamburger menu koodi w3schoolista, muokkasin sitä omien tarpeiden mukaan*/
+
+/*Nettisivun menu, pysyy paikallaan scrollattaessa*/
   .header {
     background-color: var(--palette1);
     box-shadow: 1px 1px 4px 0 rgba(0,0,0,.1);
@@ -7,7 +8,8 @@
     width: 100%;
     z-index: 3;
   }
-  
+
+  /*Menun sisältö*/
   .header ul {
     margin: 0;
     padding: 0;
@@ -34,17 +36,15 @@
     padding: 10px 20px;
     text-decoration: none;
   }
-  
-  /* menu */
-  
+    
+  /*Burgermenun avaamisanimaatio*/
   .header .menu {
     clear: both;
     max-height: 0;
     transition: max-height .2s ease-out;
   }
   
-  /* menu icon */
-  
+  /* Hamburger menun ikonin paikka */
   .header .menu-icon {
     cursor: pointer;
     display: inline-block;
@@ -53,7 +53,6 @@
     position: relative;
     user-select: none;
   }
-  
   .header .menu-icon .navicon {
     background: var(--palette3);
     display: block;
@@ -62,7 +61,7 @@
     transition: background .2s ease-out;
     width: 18px;
   }
-  
+  /*Hamburger menun ikonin piirtäminen*/
   .header .menu-icon .navicon:before,
   .header .menu-icon .navicon:after {
     background: var(--palette3);
@@ -82,35 +81,65 @@
     top: -5px;
   }
   
-  /* menu btn */
-  
+  /* checkboxin piilottaminen */
   .header .menu-btn {
     display: none;
   }
-  
   .header .menu-btn:checked ~ .menu {
     max-height: 100vh;
   }
   
+  /*Burgermenun transformaatio X:ksi käyttämällä checkbox trikkiä*/
   .header .menu-btn:checked ~ .menu-icon .navicon {
     background: transparent;
   }
-  
   .header .menu-btn:checked ~ .menu-icon .navicon:before {
     transform: rotate(-45deg);
   }
-  
   .header .menu-btn:checked ~ .menu-icon .navicon:after {
     transform: rotate(45deg);
   }
-  
   .header .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:before,
   .header .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:after {
     top: 0;
   }
   
-  /* 70em = 1120px */
   
+
+/*Muokkaukset, jotta menu toimii minun sivulla*/
+.menu {
+  display: flex;
+  align-items: center;
+}
+.menu a {
+    position: relative;
+    text-align: center;
+}
+.menu a img{
+    max-width: 10vw;
+}
+.menu a span{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: var(--palette2);
+    font-size: 1.2rem;
+}
+.menu li {
+  padding-right: 3vw;
+}
+
+.MenuTitle img{
+  padding-top: 1vh;
+  max-height: 9vh;
+  max-width: 20vw;
+  min-width: 200px;
+  float: left;
+}
+
+/*Responsiivisuus suuremmille laitteille*/
+  /* 70em = 1120px */
   @media (min-width: 70em) {
     .header li {
       float: left;
@@ -127,33 +156,11 @@
       display: none;
     }
   }
-
-.menu {
-  display: flex;
-  align-items: center;
-}
-  
-.menu a {
-    position: relative;
-    text-align: center;
-}
-
-.menu a img{
-    max-width: 10vw;
-}
-
-.menu a span{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: var(--palette2);
-    font-size: 1.2rem;
-
-}
-@media (max-width: 70em) {
+  /*Responsiivisuus pienemmille laitteille*/
+  /* 70em = 1120px */
+  @media (max-width: 70em) {
     .menu a img {
-        max-width: 20vw;
+        max-width: 25vw;
     }
 
     .menu {
