--- a/main.css
+++ b/main.css
@@ -1,8 +1,8 @@
+/*Yleiset säännöt*/
 html {
     scroll-behavior: smooth;
     font-family: 'Yusei Magic', sans-serif;
 }
-
 body {
     background-image: var(--bgWallpaper);
     height: 100vh;
@@ -10,86 +10,76 @@ body {
     padding: 0;
 }
 
+/*Scrollbaari*/
 ::-webkit-scrollbar {
     width: 20px;
 }
-
 ::-webkit-scrollbar-track {
     box-shadow: inset 0 0 5px var(--palette6);
 }
-
 ::-webkit-scrollbar-thumb {
     background: var(--palette3);
 }
-
 ::-webkit-scrollbar-thumb:hover {
     background: var(--palette2); 
 }
 
+/*tällä a tagit, joissa ei ole href atribuuttia, näyttää osoittimen*/
 a {
     cursor: pointer;
 }
 
-.TopMenu {
-    background-color: var(--palette1);
-    width: 100%;
-    height: 10vh;
-    display: flex;
-    justify-content: space-between;
-    position: fixed;
-    top: 0;
-    z-index: 2;
-}
-
-.MenuTitle {
-    height: 100%;
-    padding-left: 1vw;
-}
-
+/*light/dark toggle*/
 .ModeToggle {
     height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
     padding-right: 1vw;
+    float: right;
+}
+.ModeToggle a {
+    position: relative;
+    text-align: center;
+    padding-top: 10px;
+}
+.ModeToggle a img{
+    max-height: 9vh;
+    max-width: 11vw;
+}
+.ModeToggle a span {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: var(--palette6);
+    text-shadow: 0px 0px 3px #000000;
 }
 
-.Menu {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: space-evenly;
-}
-
+/*sosiaalisen median napit*/
 .SocialsContainer {
     display: flex;
     justify-content: center;
 }
-
 .SocialsContainer a {
     padding: 4px !important;
 }
-
 .fa-facebook {
     background: #3B5998;
     color: white;
-  }
-
+}
 .fa-instagram {
     background: #125688;
     color: white;
- }
-
+}
 .fa-linkedin {
     background: #007bb5;
     color: white;
 }
-
 .fa-whatsapp {
     background-color: #25d366;
     color: white;
 }
-
 .fa {
     padding: 20px;
     font-size: 30px;
@@ -97,12 +87,12 @@ a {
     text-align: center;
     text-decoration: none;
     border-radius: 50%;
-  }
-
+}
 .fa:hover {
     opacity: 0.7;
 }
 
+/*Sivuston Home-osio*/
 .Home {
     padding-top: 10vh;
     display: flex;
@@ -111,27 +101,22 @@ a {
     height: 85vh;
     position: relative;
 }
-
 .CharacterPic {
     padding-right: 3vw;
 }
-
 .MainContent {
     position: relative;
 }
-
 .Sun {
     position: absolute;
     top: 0;
     left: 0;
     z-index: -1;
 }
-
 .HelloText {
     padding-top: 5vh;
     padding-bottom: 5vh;
 }
-
 .HomeContent {
     display: flex;
     justify-content: center;
@@ -142,50 +127,14 @@ a {
     text-shadow: 1px 1px 2px var(--palette3), 1px 1px 2px var(--palette3);   
 }
 
-.ModeToggle {
-    float: right;
-}
-
-.ModeToggle a {
-    position: relative;
-    text-align: center;
-    padding-top: 10px;
-}
-
-.menu li {
-    padding-right: 3vw;
-}
-
-.ModeToggle a img{
-    max-height: 9vh;
-    max-width: 11vw;
-}
-
-.ModeToggle a span {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: var(--palette6);
-    text-shadow: 0px 0px 3px #000000;
-}
-
-
-.MenuTitle img{
-    padding-top: 1vh;
-    max-height: 9vh;
-    max-width: 20vw;
-    min-width: 200px;
-    float: left;
-}
-
-
+/*Sivujen välinjakaja*/
 .Divider {
     width: 100%;
     height: 10vh;
     background-color: var(--palette1);
 }
 
+/*Pieni välinjakaja sivuston loppuun, sisällä myös copyrightit*/
 .DividerSmall {
     width: 100%;
     height: 5vh;
@@ -194,36 +143,20 @@ a {
     text-align: center;
     padding-top: 1vh;
 }
-
 .DividerSmall a{
     color: inherit;
 }
 
-.AboutMe {
-    position: relative;
-    min-height: 85vh;
-    display: flex;
-    justify-content: center;
-}
-
-.Portfolio {
-    position: relative;
-    min-height: 85vh;
-    display: flex;
-    justify-content: center;
-}
-
+/*puolikas aurinko/kuu about me ja portfolio osion yllä*/
 .HalfSunContainerTop {
     position: absolute;
     top: 0;
     z-index: 1;
 }
-
 .HalfSunContainerTop img {
     vertical-align: top;
     transform: rotate(180deg);
 }
-
 .HalfSunContainerTop span{
     position: absolute;
     top: 20%;
@@ -234,19 +167,32 @@ a {
     text-shadow: 1px 1px 2px var(--palette3), 1px 1px 2px var(--palette3);
 }
 
-.ContentHolder {
+/*Sivuston About Me-osio*/
+.AboutMe {
+    position: relative;
     min-height: 85vh;
-    width: 70vw;
-    background-color: var(--palette6op);
-    overflow: auto;
+    display: flex;
+    justify-content: center;
+}
+pre {
+    white-space: pre-wrap;       /* Since CSS 2.1 */
+    white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+    white-space: -pre-wrap;      /* Opera 4-6 */
+    white-space: -o-pre-wrap;    /* Opera 7 */
+    word-wrap: break-word;       /* Internet Explorer 5.5+ */
+    font-family: inherit;
+}
+.UlStyle {
+    list-style: none;
 }
 
-.Content {
-    padding: 15vh 3vw 10vh 3vw;
-    color: var(--palette2);
-    font-size: 1.5rem;
+/*Sivuston Portfolio-osio*/
+.Portfolio {
+    position: relative;
+    min-height: 85vh;
+    display: flex;
+    justify-content: center;
 }
-
 .PortfolioImg {
     display: flex;
     justify-content: center;
@@ -254,18 +200,30 @@ a {
     flex-wrap: wrap;
     text-align: center;
 }
-
 .PortfolioImg img {
     margin: 1vh 2vw;
     width: unset;
     height: unset;
     border: 3px solid var(--palette2);
 }
-
 .PortfolioImg img:hover {
     opacity: 0.5;
 }
 
+/*About me ja Portfolion sisältö osio*/
+.ContentHolder {
+    min-height: 85vh;
+    width: 70vw;
+    background-color: var(--palette6op);
+    overflow: auto;
+}
+.Content {
+    padding: 15vh 3vw 10vh 3vw;
+    color: var(--palette2);
+    font-size: 1.5rem;
+}
+
+/*Maisemakuva*/
 .BottomImg img{
     height: initial;
     width: 100%;
@@ -275,7 +233,7 @@ a {
     z-index: -1;
 }
 
-/* The Modal (background) */
+/* Contact me (tausta) */
 .modal {
   display: none; /* Hidden by default */
   position: fixed; /* Stay in place */
@@ -291,7 +249,7 @@ a {
   background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
 }
 
-/* Modal Content */
+/* Contact me sisältö */
 .modal-content {
     position: relative;
     background-color: var(--palette4);
@@ -312,7 +270,7 @@ a {
     animation-duration: 0.4s
 }
 
-/* Add Animation */
+/* Lisää animaation contact me pop uppiin */
 @-webkit-keyframes animatetop {
   from {top:-300px; opacity:0} 
   to {top:0; opacity:1}
@@ -323,7 +281,7 @@ a {
   to {top:0; opacity:1}
 }
 
-/* The Close Button */
+/* Sulkee contact me pop upin */
 .close {
   color: white;
   font-size: 28px;
@@ -334,7 +292,6 @@ a {
   padding-right: 1vw;
   z-index: 3;
 }
-
 .close:hover,
 .close:focus {
   color: var(--palette2);
@@ -342,19 +299,13 @@ a {
   cursor: pointer;
 }
 
-.character {
-    opacity: 0.3;
-    position: absolute;
-    z-index: 0;
-}
-
+/*Contact me otsikko*/
 .CloudContainer {
     z-index: 2;
     position: relative;
     height: 10vh;
     text-align: center;
 }
-
 .CloudContainer span {
     left: 50%;
     top: 35%;
@@ -364,7 +315,6 @@ a {
     z-index: 1;
     font-size: 2rem;
 }
-
 .CloudContainer img {
     left: 50%;
     top: 30%;
@@ -374,12 +324,12 @@ a {
     position: absolute;
 }
 
+/*Contact me tiedot*/
 .InfoContainer {
     display: flex;
     justify-content: space-evenly;
     height: 30vh;
 }
-
 .Info {
     width: 30vw;
     height: 100%;
@@ -387,7 +337,6 @@ a {
     flex-direction: column;
     justify-content: space-between;
 }
-
 .Info input {
     height: 5vh;
     color: var(--palette2);
@@ -395,21 +344,16 @@ a {
     font-size: 2em;
     background-color: var(--palette6);
 }
-
 ::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
     color: var(--palette2);
     opacity: 1; /* Firefox */
 }
-  
 :-ms-input-placeholder { /* Internet Explorer 10-11 */
     color: var(--palette2);
 }
-
 ::-ms-input-placeholder { /* Microsoft Edge */
     color: var(--palette2);
 }
-
-
 .Info textarea {
     resize: none;
     height: 100%;
@@ -419,11 +363,11 @@ a {
     background-color: var(--palette6);
 }
 
+/*Contact me napit*/
 .ButtonsContainer {
     display: flex;
     justify-content: space-evenly;
 }
-
 .ButtonsContainer button {
     height: 5vh;
     color: var(--palette2);
@@ -432,11 +376,13 @@ a {
     background-color: var(--palette6);
 }
 
+/*Tekee kuvista responsiiviset*/
 img {
     width: 100%;
     height: 100%;
 }
 
+/*Responsiivisuus pienille laitteille*/
 @media (max-width: 70em) {
     .CharacterPic {
         display: none;
@@ -450,17 +396,4 @@ img {
     .HomeContent {
         font-size: min(6vw,6vh);
     }
-}
-
-pre {
-    white-space: pre-wrap;       /* Since CSS 2.1 */
-    white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
-    white-space: -pre-wrap;      /* Opera 4-6 */
-    white-space: -o-pre-wrap;    /* Opera 7 */
-    word-wrap: break-word;       /* Internet Explorer 5.5+ */
-    font-family: inherit;
-}
-
-.UlStyle {
-    list-style: none;
 }
